# finite-element-solver

./: .gitignore  CMakeLists.txt  readme.md
examples/: mesh8_result.txt  mesh_sample.txt  planar_mesh_result.txt  planar_mesh_sample.txt
ignore/: lin-alg.cpp  lin-alg.h
include/: beam_element.h  exceptions.h  finite_element.h  io_parser.h  lin-alg.h  material.h  node.h  pch.h  planar_element.h  solver.h
src/: CMakeLists.txt  beam_element.cpp  exceptions.cpp  finite_element.cpp  io_parser.cpp  lin-alg.cpp  main.cpp  planar_element.cpp  solver.cpp
